<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/rounded_dialog"
              android:padding="@dimen/dialog_margin"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doorbell_action_desc"
        android:textSize="@dimen/text_size_extra_small"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:id="@+id/cancelText"
            android:text="@string/doorbell_no"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="100dp"
            android:id="@+id/signInBtn"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_toEndOf="@id/cancelText"
            android:text="@string/doorbell_yes"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_small"
            android:background="@drawable/round_blue_btn"
            android:layout_height="35dp" />
    </RelativeLayout>


</LinearLayout>