<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                                       android:clipToPadding="false"
                                       android:scrollbarThumbVertical="@android:color/transparent"
                                       android:fillViewport="true"

>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="@dimen/activity_horizontal_margin"
    >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfileImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user"
            android:layout_centerVertical="true"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/userProfileImg"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_owner_name"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_owner_email"
                android:layout_marginTop="@dimen/medium_margin"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/medium_margin"
            />
            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/round_blue_btn"
                android:text="@string/manage_profile"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_small"
            />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_info"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/colorBlack"
        android:layout_margin="@dimen/activity_horizontal_margin"

    />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_nickname"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_name"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/medium_margin"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_members"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_owner_email"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/medium_margin"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textSize="@dimen/text_size_normal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorBlack"
    />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
        >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arm_system"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_normal"
                />
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                   android:checked="true"
                />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
            />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remote_access"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_normal"
                />
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="false"
                />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
            />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_notifications"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_normal"
                />
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="true"
                />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>