<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_greetings"
            android:textSize="@dimen/text_size_extra_large"
            android:textColor="@color/colorBlack"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:layout_marginTop="@dimen/medium_margin"
            android:textSize="@dimen/text_size_normal"
        />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="@dimen/medium_margin"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
        >
            <LinearLayout
                android:id="@+id/cameraFeedLinear"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:background="@color/colorLightPink"
            >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_cctv"
                    android:layout_gravity="center_horizontal"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_feed"
                    android:textSize="@dimen/text_size_small"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center_horizontal"
                />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cameraFeedLinear"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin"

            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_date"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_normal"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="6"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visitors_count"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                        />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visitors_label"
                            android:textColor="@color/colorDarkPink"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:textSize="@dimen/text_size_normal"
                        />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/streams_count"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                        />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/streams_label"
                            android:textColor="@color/colorDarkPink"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:textSize="@dimen/text_size_normal"
                        />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/motions_count"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                        />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/motion_label"
                            android:textColor="@color/colorDarkPink"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:textSize="@dimen/text_size_normal"
                        />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="@dimen/medium_margin"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <LinearLayout
                android:id="@+id/electricityMonitorLinear"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:background="@color/colorLightBlue"
            >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_solar_energy"
                    android:layout_gravity="center_horizontal"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electricity_monitor"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/electricityMonitorLinear"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_status"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_size_normal"
                />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_idea"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/medium_margin"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_status_desc"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_size_small"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:textAlignment="center"
                />
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_pressure_label"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/colorBlack"
        android:layout_margin="@dimen/activity_horizontal_margin"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
    >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin"
            >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_thermometer"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_label"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/text_size_normal"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temparature"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin"
            >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_meter"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_label"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/text_size_normal"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>